--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta title="stottle-react-blob-storage" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Upload to Azure Blob Storage with React"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>StottleReactBlobStorage</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
